# Honkai-Star-Rail-A-Few-Fun-Insights-with-Data-Analysis

./: .dockerignore  .gitignore  Dockerfile  HSR.pbip  Makefile  README.md  calculate_hsr.py  docker-compose.build.yml  docker-compose.yml  get_urls_auto.py  hsr.db  hsr_paths_rarities_elements.xlsx  main.py  pyproject.toml  requirements.txt  scrape_paths_elements_rarities.py  sqlite_pipeline.py  stats_of_desired_lvl.py  test.py
HSR.Dataset/: diagramLayout.json  item.config.json  item.metadata.json  model.bim
HSR.Report/: definition.pbir  item.config.json  item.metadata.json  report.json
codes/: calculate_hsr.py  create_excel.py  get_urls_auto.py  honkai_star_rail_scrape.py  scrape_paths_elements_rarities.py  web_scrap.py
data/: hsr_paths_rarities_elements.xlsx
docs/: VISUAL.md
hsr/: acheron.xlsx  argenti.xlsx  arlan.xlsx  asta.xlsx  bailu.xlsx  black-swan.xlsx  blade.xlsx  bronya.xlsx  clara.xlsx  dan-heng.xlsx  dr-ratio.xlsx  fu-xuan.xlsx  gallagher.xlsx  gepard.xlsx  guinaifen.xlsx  hanya.xlsx  herta.xlsx  himeko.xlsx  hook.xlsx  huo_huo_stat.xlsx  huohuo.xlsx  imbibitor-lunae.xlsx  jing-yuan.xlsx  jingliu.xlsx  kafka.xlsx  luka.xlsx  luocha.xlsx  lynx.xlsx  march-7th.xlsx  misha.xlsx  natasha.xlsx  pela.xlsx  qingque.xlsx  ruan-mei.xlsx  sampo.xlsx  seele.xlsx  seele_stat.xlsx  serval.xlsx  silver-wolf.xlsx  sparkle.xlsx  (+9 more)
hsrws/: __init__.py  calculate_hsr.py  create_excel.py  data_transformer.py  get_urls_auto.py  hsr_scraper.py  scrape_paths_elements_rarities.py  scrape_stats.py  sqlite_pipeline.py  utils.py  web_scrap.py
tests/: conftest.py  test.py  (+1 more)
(+156 files in other folders)
